# cliniclaw

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  cliniclaw.example.toml  demo.tape  docker-compose.yml
.github/workflows/: build-proposal.yml
crates/cliniclaw-agents/: Cargo.toml
crates/cliniclaw-agents/src/: ambient_doc.rs  cds.rs  claude.rs  discharge_plan.rs  error.rs  lab_review.rs  lib.rs  llm.rs  mock_claude.rs  model.rs  nurse_assess.rs  ollama.rs  order_entry.rs  pharmacy_review.rs  pipeline.rs  prior_auth.rs  triage_assess.rs
crates/cliniclaw-api/: Cargo.toml
crates/cliniclaw-api/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/cliniclaw-api/src/routes/: audit.rs  chain.rs  demo.rs  discharge.rs  events.rs  fhir_proxy.rs  lab_review.rs  mod.rs  notes.rs  nurse_assess.rs  orders.rs  pharmacy.rs  prior_auth.rs  simulate.rs  simulate_dynamic.rs  triage.rs  turns.rs  worklist.rs  workspace.rs
crates/cliniclaw-api/tests/: api_integration.rs
crates/cliniclaw-fhir/: Cargo.toml
crates/cliniclaw-fhir/src/: backend.rs  bundle.rs  client.rs  error.rs  lib.rs  mock.rs  mock_data.rs  synthea.rs
crates/cliniclaw-fhir/src/resources/: diagnostic_report.rs  encounter.rs  medication_request.rs  mod.rs  observation.rs  patient.rs  practitioner.rs  service_request.rs  types.rs
crates/cliniclaw-kernel/: Cargo.toml
crates/cliniclaw-kernel/src/: encounter_context.rs  error.rs  event.rs  lib.rs  store.rs  types.rs
crates/cliniclaw-persist/: Cargo.toml
crates/cliniclaw-persist/src/: error.rs  event.rs  lib.rs  sqlite.rs
crates/cliniclaw-policy/: Cargo.toml
crates/cliniclaw-policy/policies/: ambient_doc.rego  ambient_doc.toml  discharge_plan.rego  discharge_plan.toml  lab_review.rego  lab_review.toml  nurse_assess.rego  nurse_assess.toml  order_entry.rego  order_entry.toml  pharmacy_review.rego  pharmacy_review.toml  prior_auth.rego  prior_auth.toml  triage_assess.rego  triage_assess.toml
crates/cliniclaw-policy/src/: capability.rs  context.rs  decision.rs  engine.rs  error.rs  lib.rs  rego_engine.rs  rule.rs  skill.rs
crates/cliniclaw-tui/: Cargo.toml
crates/cliniclaw-tui/src/: app.rs  event.rs  main.rs  ui.rs
data/synthea/fhir/: Angel97_Rocio28_Wisozk929_62f60bdb-cc5c-8305-b98b-f2b229a55eca.json  Avery919_Bergnaum523_2d78f8fb-d31b-bf42-5d9f-09d5020af8f9.json  Clarinda196_Mayert710_6fbddf55-7096-b883-7cd3-260f27953080.json  Corie618_Sofia418_Bergnaum523_ba419d35-0dfe-8af7-347c-eebf02485a56.json  Cristobal567_Montero62_c86c400e-ff88-a1e3-2e23-caa4d8311f47.json  Dwana281_Zora492_Okuneva707_982750f4-569b-5949-196b-60699bdda3fb.json  Eliseo499_Nader710_2c167999-289d-95fa-5c27-7d8b8d35348c.json  Eunice461_Fay398_d3727ff2-5d7b-347f-d78c-edc4323cf890.json  Ezekiel373_Walter473_4f083ce3-f12b-bb4b-7353-e17f0cd55b0a.json  Jody426_Hickle134_76b20010-c318-5754-8c85-983aa538522f.json  Jona712_Bonnie873_Pfeffer420_aa616abe-1761-0c9a-7959-07544679dafd.json  Larissa293_Jackeline690_Tillman293_eb5910f1-26e6-bc6f-b300-716eae678d6f.json  Lindsay928_Zieme486_46976cf7-b0bf-be20-39a5-9f425a52886d.json  Mauro926_Braun514_2d68ad16-268a-478c-1f84-d0f1976e1a46.json  Paul232_Tremblay80_9661a432-4630-2cd9-142c-386845fae837.json  Rosario163_Ortiz186_bff9d9d5-ee3d-d852-9c67-36d8361a4a4a.json  Shalanda398_Kelsie51_Bailey598_46ee9d82-b52c-856d-069b-5064ff052225.json  Tajuana20_Metz686_3183583b-924a-54e9-1f7f-613d3ef793b6.json  Tennille443_Denna536_Conroy74_e74367bd-7385-97dc-2c7f-251b4cd9fe29.json  Violette536_Harvey63_14ed00d3-dd7a-016f-13e8-5427a373cde6.json  Wallace647_Effertz744_5e688e99-61b3-5c88-3f60-21df8aaced27.json  Wilfredo622_Fritsch593_aee7bbe1-0c45-c028-1e62-1f4cdb30c273.json  hospitalInformation1772813790855.json  practitionerInformation1772813790855.json
data/synthea/metadata/: 2026_03_06T16_16_30Z_20_Massachusetts_f7af87ba_248e_4f18_9e6e_a1e131a51a36.json
docs/: ARCHITECTURE.md
docs/proposals/2026-05-18-cv-surgical-copilot-jeng/: BUILD.md  CONFIRM-LIST.md  PROPOSAL.md  README.md  REFERENCES.md  build_share.py
docs/superpowers/plans/: 2026-05-18-cv-surgical-copilot-grant-proposal.md
docs/superpowers/specs/: 2026-05-18-cv-surgical-copilot-grant-design.md
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/audit/: page.tsx
web/src/app/chart/[patientId]/: layout.tsx  page.tsx
web/src/app/chart/[patientId]/audit-trail/: page.tsx
web/src/app/chart/[patientId]/notes/: page.tsx
web/src/app/chart/[patientId]/orders/: page.tsx
web/src/app/chart/[patientId]/prior-auth/: page.tsx
web/src/app/chart/[patientId]/review/: page.tsx
web/src/app/demo/: page.tsx
web/src/app/hospital/: page.tsx
web/src/app/hospital/3d/: page.tsx
web/src/components/: audit-view.tsx  error-boundary.tsx  nav-link.tsx
web/src/components/clinical/: activity-stream.tsx  chain-view.tsx  confidence-meter.tsx  governance-pipeline.tsx  replay-view.tsx  turn-card.tsx  turn-queue.tsx
web/src/components/hospital3d/: AgentAvatar.tsx  AgentNode.tsx  AmbientParticles.tsx  CameraRig.tsx  ConnectionBeam.tsx  ControlBar.tsx  EventPanel.tsx  GroundPlane.tsx  HospitalFloor.tsx  HospitalScene.tsx  Lighting.tsx  NetworkScene.tsx  PatientBed.tsx  PatientNode.tsx  Room.tsx
web/src/hooks/: use-all-events-stream.ts  use-confidence-ui.ts  use-event-stream.ts  use-scene-state.ts
web/src/lib/: agent-events.ts  api.ts  patient-context.tsx  types.ts  utils.ts
web/src/lib/hospital3d/: avatar-state-machine.ts  constants.ts  event-bridge.ts  layout.ts
