[workspace]
resolver = "2"
members = [
    "crates/cliniclaw-fhir",
    "crates/cliniclaw-policy",
    "crates/cliniclaw-persist",
    "crates/cliniclaw-kernel",
    "crates/cliniclaw-agents",
    "crates/cliniclaw-api",
    "crates/cliniclaw-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AI-native, FHIR R4-native Hospital Information System with policy-gated agents"
repository = "https://github.com/Chesterguan/cliniclaw"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FHIR / HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# AI
# anthropic SDK or raw reqwest calls to Claude API

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }

# Async traits
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "0.8"
regorus = "0.2"
secrecy = "0.10"
base64 = "0.22"

# Internal crates
cliniclaw-fhir = { path = "crates/cliniclaw-fhir" }
cliniclaw-policy = { path = "crates/cliniclaw-policy" }
cliniclaw-persist = { path = "crates/cliniclaw-persist" }
cliniclaw-kernel = { path = "crates/cliniclaw-kernel" }
cliniclaw-agents = { path = "crates/cliniclaw-agents" }
