[package]
name = "cliniclaw-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for ClinicClaw"

[[bin]]
name = "cliniclaw"
path = "src/main.rs"

[lib]
name = "cliniclaw_api"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

cliniclaw-fhir = { workspace = true }
cliniclaw-policy = { workspace = true }
cliniclaw-persist = { workspace = true }
cliniclaw-kernel = { workspace = true }
cliniclaw-agents = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
