[package]
name = "cliniclaw-fhir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FHIR R4 client and resource types for ClinicClaw"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
async-trait = { workspace = true }
