[package]
name = "cliniclaw-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Human-agent collaboration kernel for ClinicClaw"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
