[package]
name = "cliniclaw-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VERITAS-style policy engine for ClinicClaw clinical workflows"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
regorus = { workspace = true }
